--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             </div>
             
             <iframe 
-                src="/documentation/research-proposal.pdf" 
+                src="/documentation/Project Research Proposal.pdf" 
                 class="pdf-container"
                 title="Research Proposal - Options Pricing in Lévy Models">
             </iframe>
