Update and rename levy-processes-paper.pdf to levy-processes-paper.html

--- a/levy-processes-paper.html
+++ b/levy-processes-paper.html
@@ -173,7 +173,7 @@
             
             <div class="pdf-fallback">
                 <p>If the PDF doesn't display above, you can download it directly:</p>
-                <a href="levy-processes-paper.pdf" class="download-btn" download>
+                <a href="/documentation/Option Pricing in Levy Models - Feng et al - Academic Paper.pdf" class="download-btn" download>
                     📄 Download Lévy Processes Paper PDF
                 </a>
             </div>
